[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI_Game.gd" type="Script" id=1]
[ext_resource path="res://arts/wqy-microhei.tres" type="DynamicFont" id=2]
[ext_resource path="res://level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://arts/wqy-microhei.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://description.gd" type="Script" id=5]
[ext_resource path="res://SlotSetResource.tres" type="TileSet" id=6]
[ext_resource path="res://slot.gd" type="Script" id=7]
[ext_resource path="res://arts/cursor_green.png" type="Texture" id=8]
[ext_resource path="res://arts/cursor.png" type="Texture" id=9]
[ext_resource path="res://use.gd" type="Script" id=10]
[ext_resource path="res://drop.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="UI" type="HBoxContainer"]
margin_right = 1280.0

[node name="Game" type="VBoxContainer" parent="."]
margin_right = 1000.0
margin_bottom = 728.0
rect_min_size = Vector2( 1000, 0 )
script = ExtResource( 1 )

[node name="MessageMargin" type="MarginContainer" parent="Game"]
margin_right = 1000.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Message" type="Label" parent="Game/MessageMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 2 )
valign = 1

[node name="Timer" type="Timer" parent="Game/MessageMargin"]
wait_time = 5.0

[node name="Dungeon" type="ViewportContainer" parent="Game"]
margin_top = 44.0
margin_right = 1000.0
margin_bottom = 644.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="Game/Dungeon"]
size = Vector2( 1000, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Map" parent="Game/Dungeon/Viewport" instance=ExtResource( 3 )]

[node name="StatusMargin" type="MarginContainer" parent="Game"]
margin_top = 648.0
margin_right = 1000.0
margin_bottom = 728.0
rect_min_size = Vector2( 0, 80 )
custom_constants/margin_right = 40
custom_constants/margin_top = 10
custom_constants/margin_left = 40
custom_constants/margin_bottom = 10

[node name="Status" type="HBoxContainer" parent="Game/StatusMargin"]
margin_left = 40.0
margin_top = 10.0
margin_right = 960.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Level" type="Label" parent="Game/StatusMargin/Status"]
margin_top = 20.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="Gold" type="Label" parent="Game/StatusMargin/Status"]
margin_left = 50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="Hp" type="Label" parent="Game/StatusMargin/Status"]
margin_left = 100.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="Str" type="Label" parent="Game/StatusMargin/Status"]
margin_left = 150.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="Arm" type="Label" parent="Game/StatusMargin/Status"]
margin_left = 200.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="Exp" type="Label" parent="Game/StatusMargin/Status"]
margin_left = 250.0
margin_top = 20.0
margin_right = 250.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )

[node name="Inventory" type="VBoxContainer" parent="."]
margin_left = 1004.0
margin_right = 1280.0
margin_bottom = 728.0
size_flags_horizontal = 3

[node name="description" type="Label" parent="Inventory"]
margin_right = 256.0
margin_bottom = 200.0
rect_min_size = Vector2( 256, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.792157, 0.215686, 1 )
align = 1
valign = 1
script = ExtResource( 5 )

[node name="slots" type="Control" parent="Inventory"]
margin_top = 204.0
margin_right = 256.0
margin_bottom = 396.0
rect_min_size = Vector2( 256, 192 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="slot" type="TileMap" parent="Inventory/slots"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0 )
script = ExtResource( 7 )

[node name="selected" type="Sprite" parent="Inventory/slots"]
visible = false
texture = ExtResource( 8 )
centered = false

[node name="cursor" type="Sprite" parent="Inventory/slots"]
visible = false
texture = ExtResource( 9 )
centered = false

[node name="use" type="Button" parent="Inventory"]
margin_top = 400.0
margin_right = 256.0
margin_bottom = 425.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "使用"
script = ExtResource( 10 )

[node name="drop" type="Button" parent="Inventory"]
margin_top = 429.0
margin_right = 256.0
margin_bottom = 454.0
rect_min_size = Vector2( 256, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "丢弃"
script = ExtResource( 11 )

[connection signal="timeout" from="Game/MessageMargin/Timer" to="Game" method="_on_Timer_timeout"]
[connection signal="gui_input" from="Inventory/slots" to="Inventory/slots/slot" method="_on_slots_gui_input"]
[connection signal="mouse_exited" from="Inventory/slots" to="Inventory/slots/slot" method="_on_slots_mouse_exited"]
[connection signal="item_selected" from="Inventory/slots/slot" to="Inventory/description" method="_on_slot_item_selected"]
[connection signal="item_selected" from="Inventory/slots/slot" to="Inventory/use" method="_on_slot_item_selected"]
[connection signal="item_selected" from="Inventory/slots/slot" to="Inventory/drop" method="_on_slot_item_selected"]
